--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-particles": "^2.9.3",
+    "react-tsparticles": "^2.10.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -41,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tsparticles": "^2.9.3"
   }
 }
