--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://aavdienko.github.io/first-portfolio",
   "dependencies": {
+    "@emotion/react": "^11.11.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -12,10 +13,16 @@
     "node-sass": "^9.0.0",
     "pages": "^0.0.16",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.3",
+    "react-do": "^1.1.6",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
     "react-particles": "^2.9.3",
+    "react-reveal": "^1.2.2",
+    "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
+    "react-tilt": "^1.0.2",
     "react-tsparticles": "^2.10.1",
+    "react-typing-effect": "^2.0.5",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
