--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "emailjs-com": "^3.2.0",
     "gh": "^2.8.9",
     "gh-pages": "^5.0.0",
     "node-sass": "^9.0.0",
